 - Reuse of connections for HTTP (enable w/ http_persistent_conns in dillorc).
 - Fix X11 icon name.
 - Abort failed queries.
 - In location bar, tend toward showing beginning of URL instead of end.
 - Handle irix's version of vsnprintf().
 - INPUT, TEXTAREA placeholder attribute.
 - Better notification when user's domainrc settings block page redirection.
   Patches: corvid
+- Avoid requesting background images if an ancestor has display:none.
 - Ignore built-in search url if any are specified in dillorc.
   Patches: Johannes Hofmann
+- Doxygen fixes.
   Patch: Jeremy Henty

-----------------------------------------------------------------------------

dillo-3.0.4.1 [December 24, 2014]

+- Avoid a corner case segfault when no search URL is found in dillorc.
   Patch: Sebastian Geerken, Jorge Arellano
+- Fix linking problem with fltk-1.3.3 and fl_oldfocus.
 - Don't follow redirections or meta refresh in --local mode.
   Patches: Jorge Arellano Cid
+- Don't load background images in --local mode.
 - Make sure window is resizable with fltk-1.3.3.
   Patches: Johannes Hofmann
+- Remove Fl_Printer stub that always gave problems compiling under OSX.
   Patch: corvid

-----------------------------------------------------------------------------

dillo-3.0.4 [April 09, 2014]

+- OPTGROUP and INS elements.
 - Some HTML5 elements, etc.
 - Added show_ui_tooltip preference (BUG#1140).
   Patches: corvid
+- Make embedding into other applications more reliable (BUG#1127).
 - Add search from address bar.
 - Share CSS user agent stylesheet between pages.
   Patches: Johannes Hofmann
+- Better scaling (down) of images, even with consideration of gamma
   correction.
 - Fixed (possibly security) problem of FltkImgBuf caused by integer overflow
   (BUG#1129).
 - Some linebreaking fixes, and optimization for non-justified text, including
   new preference stretchability_factor.
 - Added white_bg_replacement preference.